# fiesta

./: .gitmodules  CITATION  CMakeLists.txt  README.md  configure.sh  fiesta-complete.sh  fiesta.pbs  ko.modules  mpich.rc  openmpi.rc  slice.py
MallocPlus/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MallocPlus/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
PowerParser/: CTestTestfile.cmake  Makefile  cmake_install.cmake
PowerParser/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cgns/: CMakeLists.txt
cmake/: hdf5.cmake  kokkos.cmake
cmake/Modules/: FindFREEGLUT.cmake
crux/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: Capulin_instructions.md  Darwin_instructions.md  Logger.rst  Makefile  Signals.rst  equations.tex  plain.css
docs/: .gitignore
docs/source/: buildguide.rst  conf.py  devguide.rst  index.rst  input.rst  intro.rst  techref.rst  tutorials.rst  userguide.rst  variables.rst
ezcl/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libezcl.so.2  libezcl.so.2.0.7  libpezcl.so.2  libpezcl.so.2.0.7
ezcl/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
genmalloc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libgenmalloc.so.2  libgenmalloc.so.2.0.7
graphics/: CMakeLists.txt  display.c  display.h  graphics.c  graphics.h
hash/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hashlib_kern.inc  hashlib_source_kern.inc
hdf5/src/: H5Edefin.h  H5Einit.h  H5Epubgen.h  H5Eterm.h
kokkos/: CMakeCache.txt  Makefile.kokkos
l7/: CTestTestfile.cmake  Makefile  cmake_install.cmake  l7_kernel.inc
l7/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lua/: CMakeLists.txt
makefiles/: Makefile  Makefile.fiestabuild  Makefile.kokkosbuild
memstats/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libmemstats.so.2  libmemstats.so.2.0.7
mesh/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mesh.cpp  mesh.h  mesh_kern.cl  mesh_kernel.inc  partition.cpp  reduce_kernel.inc
mesh/hsfc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libhsfc.so.2  libhsfc.so.2.0.0
mesh/kdtree/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libkdtree.so.2  libkdtree.so.2.0.0
mesh/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mesh/zorder/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libzorder.so.2  libzorder.so.2.0.0  zorder.c
powerstats/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libpowerstats.so.2  libpowerstats.so.2.0.7
samples/: fiesta.lua
samples/2D_Expansion/: fiesta.lua
samples/2dSod/: fiesta.lua
samples/2dubble/: fiesta.lua
samples/3D_Expansion/: README.md  fiesta.lua  fiesta.slurm
samples/3dubble/: fiesta.lua
samples/RisingBubble2D/: fiesta.lua
samples/boundary_layer/: fiesta.lua
samples/idexp_particle_2D/: fiesta.lua
samples/rt2d/: fiesta.lua
samples/rt3d/: fiesta.lua
samples/shockprofile/: input.lua
src/: CMakeLists.txt  Makefile  advect.hpp  bc.cpp  bc.hpp  block.cpp  block.hpp  blockvec.cpp  buoyancy.hpp  cart2d.cpp  cart2d.hpp  cart3d.cpp  cart3d.hpp  ceq.hpp  ceq3d.hpp  cgns.c  cgns.cpp  cgns.h  cgns.hpp  debug.hpp  diagnostics.cpp  diagnostics.hpp  fclean.cpp  fiesta.cpp  fiesta.hpp  fiesta2.hpp  flux.hpp  gen2d.cpp  gen2d.hpp  gen3d.cpp  gen3d.hpp  h5.cpp  h5.hpp  hdf.cpp  hdf.hpp  hydro2d.cpp  hydro2d.hpp  hydro2dvisc.cpp  hydro2dvisc.hpp  hydroc3d.cpp  (+56 more)
test/2dSod/: fiesta.lua
test/RisingBubble2D/: fiesta.lua
test/ideal_expansion_2D/: compare.py  fiesta.lua  input.lua  sol.0020.ref  sol.0100.ref  sol.1000.ref
test/ideal_expansion_3D/: fiesta.lua  input.lua
test/ideal_expansion_generalized_2D/: fiesta.lua
test/idexp2d/: fiesta.lua
test/idexp3dterrain/: fiesta.lua  genTerrain.py  terrain.h5
test/idexp_particle_2D/: fiesta.lua
test/inclined_cylinder_2D/: input.lua
test/shockprofile/: input.lua  input.old
test/shocktube/: fiesta.lua  input.lua
tests/: bc_hydrostatic.cpp  bc_outflow.cpp  bc_reflective.cpp  halox.cpp  halox_ordered.cpp  halox_unordered.cpp  test.cpp  tests.cmake
tests/common/: test.cpp  test.hpp
timer/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libmptimer.so.2  libmptimer.so.2.0.7  libtimer.so.2  libtimer.so.2.0.7
tools/: check.lua
tpls/: fmt.cmake  hdf5.cmake  kokkos.cmake  lua.cmake  yogrt.cmake
tpls/lua/: CMakeLists.txt
tpls/yogrt/: libyogrt-1.24.tar
